--- a/src/components/Expenses/Expenses.css
+++ b/src/components/Expenses/Expenses.css
@@ -3,7 +3,17 @@
 	background-color: rgb(31, 31, 31);
 	margin: 2rem auto;
 	width: 50rem;
-    max-width: 95%;
+	max-width: 95%;
 	border-radius: 12px;
 	box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
+}
+
+.expenses-list {
+	list-style: none;
+	padding: 0;
+}
+
+.expenses-list__fallback {
+	color: white;
+	text-align: center;
 }
